--- a/sass/public/site/_site.scss
+++ b/sass/public/site/_site.scss
@@ -1,5 +1,10 @@
-// @import "../layout/content-sidebar";
-// @import "../layout/sidebar-content";
+#page {
+	background-color: $color__background-page;
+	margin: 0 auto;
+}
+
+
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
