--- a/sass/public/variables-site/_colors.scss
+++ b/sass/public/variables-site/_colors.scss
@@ -1,4 +1,9 @@
-$color__background-body: #fff;
+$color__background-body: #ffffff;
+$color__background-page: #ffffff;
+
+
+
+
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
