--- a/sass/public/site/_site.scss
+++ b/sass/public/site/_site.scss
@@ -3,6 +3,11 @@
 	margin: 0 auto;
 }
 
+.container-fluid .apollo-wrapper {
+	max-width: $max_width__apollo-wrapper;
+	margin: 0 auto;
+}
+
 
 
 /*--------------------------------------------------------------
