--- a/sass/public/site/_site.scss
+++ b/sass/public/site/_site.scss
@@ -9,6 +9,10 @@
 }
 
 
+/*--------------------------------------------------------------
+## Header
+--------------------------------------------------------------*/
+@import "header/header";
 
 /*--------------------------------------------------------------
 ## Posts and pages
