--- a/sass/public/variables-site/_colors.scss
+++ b/sass/public/variables-site/_colors.scss
@@ -1,7 +1,10 @@
 $color__background-body: #ffffff;
 $color__background-page: #ffffff;
 
+$color__header-background: rgba( 255, 255, 255, 1 );
 
+$color__text-main: #111111;
+$color__text-muted: #777777;
 
 
 $color__background-screen: #f1f1f1;
@@ -16,7 +19,7 @@ $color__text-input-focus: #111;
 $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
-$color__text-main: #404040;
+
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
