--- a/sass/public/style.scss
+++ b/sass/public/style.scss
@@ -51,8 +51,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
+/*--------------------------------------------------------------
 @import "normalize";
-
+--------------------------------------------------------------*/
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
