--- a/style.css
+++ b/style.css
@@ -47,182 +47,9 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
-html {
-  font-family: sans-serif;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
-
-body {
-  margin: 0; }
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block; }
-
-audio,
-canvas,
-progress,
-video {
-  display: inline-block;
-  vertical-align: baseline; }
-
-audio:not([controls]) {
-  display: none;
-  height: 0; }
-
-[hidden],
-template {
-  display: none; }
-
-a {
-  background-color: transparent; }
-
-a:active,
-a:hover {
-  outline: 0; }
-
-abbr[title] {
-  border-bottom: 1px dotted; }
-
-b,
-strong {
-  font-weight: bold; }
-
-dfn {
-  font-style: italic; }
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0; }
-
-mark {
-  background: #ff0;
-  color: #000; }
-
-small {
-  font-size: 80%; }
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline; }
-
-sup {
-  top: -0.5em; }
-
-sub {
-  bottom: -0.25em; }
-
-img {
-  border: 0; }
-
-svg:not(:root) {
-  overflow: hidden; }
-
-figure {
-  margin: 1em 40px; }
-
-hr {
-  box-sizing: content-box;
-  height: 0; }
-
-pre {
-  overflow: auto; }
-
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em; }
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  color: inherit;
-  font: inherit;
-  margin: 0; }
-
-button {
-  overflow: visible; }
-
-button,
-select {
-  text-transform: none; }
-
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer; }
-
-button[disabled],
-html input[disabled] {
-  cursor: default; }
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0; }
-
-input {
-  line-height: normal; }
-
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0; }
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  height: auto; }
-
-input[type="search"] {
-  -webkit-appearance: textfield;
-  box-sizing: content-box; }
-
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
-
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em; }
-
-legend {
-  border: 0;
-  padding: 0; }
-
-textarea {
-  overflow: auto; }
-
-optgroup {
-  font-weight: bold; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-td,
-th {
-  padding: 0; }
-
+/*--------------------------------------------------------------
+@import "normalize";
+--------------------------------------------------------------*/
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
@@ -231,7 +58,7 @@ button,
 input,
 select,
 textarea {
-  color: #404040;
+  color: #111111;
   font-family: sans-serif;
   font-size: 16px;
   font-size: 1rem;
@@ -614,6 +441,33 @@ a {
   margin: 0 auto; }
 
 /*--------------------------------------------------------------
+## Header
+--------------------------------------------------------------*/
+.apollo-navbar-default .site-branding {
+  display: inline-block; }
+  .apollo-navbar-default .site-branding .site-logo-wrapper,
+  .apollo-navbar-default .site-branding .site-title-wrapper {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px; }
+.apollo-navbar-default .site-title {
+  margin: 0.2em 0; }
+  .apollo-navbar-default .site-title a {
+    color: #111111; }
+    .apollo-navbar-default .site-title a:hover, .apollo-navbar-default .site-title a:active, .apollo-navbar-default .site-title a:visited, .apollo-navbar-default .site-title a:focus {
+      color: #111111;
+      text-decoration: none; }
+.apollo-navbar-default .site-description {
+  color: #777777; }
+
+.apollo-header-sticky-top .apollo-navbar-default {
+  -webkit-transition: background-color 500ms linear;
+  -moz-transition: background-color 500ms linear;
+  -o-transition: background-color 500ms linear;
+  -ms-transition: background-color 500ms linear;
+  transition: background-color 500ms linear; }
+
+/*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
 .sticky {
@@ -735,5 +589,43 @@ object {
 /*--------------------------------------------------------------
 # Bootstrap
 --------------------------------------------------------------*/
+.navbar-default {
+  border-radius: 0;
+  border: 0;
+  margin-bottom: 0;
+  background-color: white; }
+  .navbar-default .navbar-toggle {
+    border: none;
+    background: transparent !important;
+    box-shadow: none;
+    margin-right: 0; }
+    .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:active, .navbar-default .navbar-toggle:focus {
+      background: transparent	!important;
+      box-shadow: none; }
+    .navbar-default .navbar-toggle .icon-bar {
+      width: 22px;
+      transition: all 0.2s; }
+    .navbar-default .navbar-toggle .top-bar {
+      transform: rotate(45deg);
+      transform-origin: 10% 10%; }
+    .navbar-default .navbar-toggle .middle-bar {
+      opacity: 0; }
+    .navbar-default .navbar-toggle .bottom-bar {
+      transform: rotate(-45deg);
+      transform-origin: 10% 90%; }
+    .navbar-default .navbar-toggle.collapsed .top-bar {
+      transform: rotate(0); }
+    .navbar-default .navbar-toggle.collapsed .middle-bar {
+      opacity: 1; }
+    .navbar-default .navbar-toggle.collapsed .bottom-bar {
+      transform: rotate(0); }
+
+@media (min-width: 768px) {
+  .navbar-default #navbar {
+    position: absolute;
+    right: 0px;
+    bottom: 0px; }
+  .navbar-default .apollo-toggle-icon {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
